Improve Transformer Model

--- a/src/ImprovedHybridTransformer/hybrid_training.ipynb
+++ b/src/ImprovedHybridTransformer/hybrid_training.ipynb
@@ -14,7 +14,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# CLAUDE_ADDED\nimport numpy as np\nimport matplotlib.pyplot as plt\nimport torch\nimport torch.nn as nn\nimport torch.optim as optim\nfrom torch.utils.data import DataLoader, TensorDataset\nimport os\nimport sys\nfrom tqdm import tqdm\nimport json\nfrom datetime import datetime\n\n# パスを追加\ncurrent_dir = os.path.dirname(os.path.abspath('__file__'))\nsrc_dir = os.path.dirname(current_dir)\nroot_dir = os.path.dirname(src_dir)\nsys.path.insert(0, root_dir)\nsys.path.insert(0, src_dir)\n\nfrom src.HybridModel import HybridTrajectoryModel\nfrom src.DataPreprocess.DataPreprocessForOverFitting import load_processed_data"
+   "source": [
+    "# CLAUDE_ADDED\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "import os\n",
+    "import sys\n",
+    "from tqdm import tqdm\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# パスを追加\n",
+    "current_dir = os.path.dirname(os.path.abspath('__file__'))\n",
+    "src_dir = os.path.dirname(current_dir)\n",
+    "root_dir = os.path.dirname(src_dir)\n",
+    "sys.path.insert(0, root_dir)\n",
+    "sys.path.insert(0, src_dir)\n",
+    "\n",
+    "from src.ImprovedHybridTransformer import HybridTrajectoryModel\n",
+    "from src.DataPreprocess.DataPreprocessForOverFitting import load_processed_data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +109,89 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "# CLAUDE_ADDED\nfrom src.HybridModel.data_decomposition import DataDecomposer\n\n# データ分解器を初期化\ndecomposer = DataDecomposer(window_size=10)\n\n# サンプルデータで分解をテスト\nsample_trajectories = torch.tensor(trajectories[:5], dtype=torch.float32)\nlow_freq, high_freq = decomposer.decompose(sample_trajectories)\n\n# 分解結果の可視化\nplt.figure(figsize=(20, 12))\n\nfor i in range(5):\n    # X軸の分解\n    plt.subplot(5, 6, i*6 + 1)\n    plt.plot(sample_trajectories[i, :, 0], label='Original', linewidth=2)\n    plt.plot(low_freq[i, :, 0], label='Low Freq', linewidth=2)\n    plt.plot(high_freq[i, :, 0], label='High Freq', alpha=0.7)\n    plt.title(f'Sample {i+1} - X軸分解')\n    plt.legend()\n    plt.grid(True)\n    \n    # Y軸の分解\n    plt.subplot(5, 6, i*6 + 2)\n    plt.plot(sample_trajectories[i, :, 1], label='Original', linewidth=2)\n    plt.plot(low_freq[i, :, 1], label='Low Freq', linewidth=2)\n    plt.plot(high_freq[i, :, 1], label='High Freq', alpha=0.7)\n    plt.title(f'Sample {i+1} - Y軸分解')\n    plt.legend()\n    plt.grid(True)\n    \n    # 軌道平面での可視化\n    plt.subplot(5, 6, i*6 + 3)\n    plt.plot(sample_trajectories[i, :, 0], sample_trajectories[i, :, 1], 'k-', label='Original', linewidth=2)\n    plt.plot(low_freq[i, :, 0], low_freq[i, :, 1], 'b-', label='Low Freq', linewidth=2)\n    plt.xlabel('X Position')\n    plt.ylabel('Y Position')\n    plt.title(f'Sample {i+1} - 軌道比較')\n    plt.legend()\n    plt.grid(True)\n    \n    # 高周波成分の軌道\n    plt.subplot(5, 6, i*6 + 4)\n    plt.plot(high_freq[i, :, 0], high_freq[i, :, 1], 'r-', alpha=0.7)\n    plt.xlabel('X Residual')\n    plt.ylabel('Y Residual')\n    plt.title(f'Sample {i+1} - 高周波成分')\n    plt.grid(True)\n    \n    # パワースペクトラム\n    plt.subplot(5, 6, i*6 + 5)\n    original_fft = np.abs(np.fft.fft(sample_trajectories[i, :, 0]))\n    low_freq_fft = np.abs(np.fft.fft(low_freq[i, :, 0]))\n    high_freq_fft = np.abs(np.fft.fft(high_freq[i, :, 0]))\n    \n    freqs = np.fft.fftfreq(len(original_fft))\n    plt.semilogy(freqs[:len(freqs)//2], original_fft[:len(freqs)//2], label='Original')\n    plt.semilogy(freqs[:len(freqs)//2], low_freq_fft[:len(freqs)//2], label='Low Freq')\n    plt.semilogy(freqs[:len(freqs)//2], high_freq_fft[:len(freqs)//2], label='High Freq')\n    plt.xlabel('Frequency')\n    plt.ylabel('Power')\n    plt.title(f'Sample {i+1} - パワースペクトラム')\n    plt.legend()\n    plt.grid(True)\n    \n    # 復元誤差\n    plt.subplot(5, 6, i*6 + 6)\n    reconstructed = decomposer.reconstruct(low_freq[i:i+1], high_freq[i:i+1])\n    error = torch.abs(sample_trajectories[i] - reconstructed[0])\n    plt.plot(error[:, 0], label='X Error')\n    plt.plot(error[:, 1], label='Y Error')\n    plt.xlabel('Time Step')\n    plt.ylabel('Reconstruction Error')\n    plt.title(f'Sample {i+1} - 復元誤差')\n    plt.legend()\n    plt.grid(True)\n\nplt.suptitle('データ分解の詳細分析', fontsize=16, y=1.02)\nplt.tight_layout()\nplt.show()"
+   "source": [
+    "# CLAUDE_ADDED\n",
+    "from src.ImprovedHybridTransformer.data_decomposition import DataDecomposer\n",
+    "\n",
+    "# データ分解器を初期化\n",
+    "decomposer = DataDecomposer(window_size=10)\n",
+    "\n",
+    "# サンプルデータで分解をテスト\n",
+    "sample_trajectories = torch.tensor(trajectories[:5], dtype=torch.float32)\n",
+    "low_freq, high_freq = decomposer.decompose(sample_trajectories)\n",
+    "\n",
+    "# 分解結果の可視化\n",
+    "plt.figure(figsize=(20, 12))\n",
+    "\n",
+    "for i in range(5):\n",
+    "    # X軸の分解\n",
+    "    plt.subplot(5, 6, i*6 + 1)\n",
+    "    plt.plot(sample_trajectories[i, :, 0], label='Original', linewidth=2)\n",
+    "    plt.plot(low_freq[i, :, 0], label='Low Freq', linewidth=2)\n",
+    "    plt.plot(high_freq[i, :, 0], label='High Freq', alpha=0.7)\n",
+    "    plt.title(f'Sample {i+1} - X軸分解')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # Y軸の分解\n",
+    "    plt.subplot(5, 6, i*6 + 2)\n",
+    "    plt.plot(sample_trajectories[i, :, 1], label='Original', linewidth=2)\n",
+    "    plt.plot(low_freq[i, :, 1], label='Low Freq', linewidth=2)\n",
+    "    plt.plot(high_freq[i, :, 1], label='High Freq', alpha=0.7)\n",
+    "    plt.title(f'Sample {i+1} - Y軸分解')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # 軌道平面での可視化\n",
+    "    plt.subplot(5, 6, i*6 + 3)\n",
+    "    plt.plot(sample_trajectories[i, :, 0], sample_trajectories[i, :, 1], 'k-', label='Original', linewidth=2)\n",
+    "    plt.plot(low_freq[i, :, 0], low_freq[i, :, 1], 'b-', label='Low Freq', linewidth=2)\n",
+    "    plt.xlabel('X Position')\n",
+    "    plt.ylabel('Y Position')\n",
+    "    plt.title(f'Sample {i+1} - 軌道比較')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # 高周波成分の軌道\n",
+    "    plt.subplot(5, 6, i*6 + 4)\n",
+    "    plt.plot(high_freq[i, :, 0], high_freq[i, :, 1], 'r-', alpha=0.7)\n",
+    "    plt.xlabel('X Residual')\n",
+    "    plt.ylabel('Y Residual')\n",
+    "    plt.title(f'Sample {i+1} - 高周波成分')\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # パワースペクトラム\n",
+    "    plt.subplot(5, 6, i*6 + 5)\n",
+    "    original_fft = np.abs(np.fft.fft(sample_trajectories[i, :, 0]))\n",
+    "    low_freq_fft = np.abs(np.fft.fft(low_freq[i, :, 0]))\n",
+    "    high_freq_fft = np.abs(np.fft.fft(high_freq[i, :, 0]))\n",
+    "    \n",
+    "    freqs = np.fft.fftfreq(len(original_fft))\n",
+    "    plt.semilogy(freqs[:len(freqs)//2], original_fft[:len(freqs)//2], label='Original')\n",
+    "    plt.semilogy(freqs[:len(freqs)//2], low_freq_fft[:len(freqs)//2], label='Low Freq')\n",
+    "    plt.semilogy(freqs[:len(freqs)//2], high_freq_fft[:len(freqs)//2], label='High Freq')\n",
+    "    plt.xlabel('Frequency')\n",
+    "    plt.ylabel('Power')\n",
+    "    plt.title(f'Sample {i+1} - パワースペクトラム')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    \n",
+    "    # 復元誤差\n",
+    "    plt.subplot(5, 6, i*6 + 6)\n",
+    "    reconstructed = decomposer.reconstruct(low_freq[i:i+1], high_freq[i:i+1])\n",
+    "    error = torch.abs(sample_trajectories[i] - reconstructed[0])\n",
+    "    plt.plot(error[:, 0], label='X Error')\n",
+    "    plt.plot(error[:, 1], label='Y Error')\n",
+    "    plt.xlabel('Time Step')\n",
+    "    plt.ylabel('Reconstruction Error')\n",
+    "    plt.title(f'Sample {i+1} - 復元誤差')\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "\n",
+    "plt.suptitle('データ分解の詳細分析', fontsize=16, y=1.02)\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
